fixed css positioning

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-  <div id = wrapper>
+  <div class = wrapper>
     <p class = "center">Etch a Sketch</p>
     <div id = "buttonlayout">
       <button id = "reset">Reset</button>
